--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "cron": "^3.1.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
