otp/password added

--- a/config/config.env
+++ b/config/config.env
@@ -4,8 +4,8 @@ TOKEN_KEY = asafnk21!!1513
 TOKEN_EXPIRY = 3d
 ENCRYPTION_KEY = "asafnk21!!1513"
 
-AUTH_EMAIL = rsandroidapp@volga.asia
-AUTH_PASS = 3rsDigital24@2012
+AUTH_EMAIL = azreelro.khanbo@gmail.com
+AUTH_PASS = P@tanhi12
 
 
 
